package com.bohdanbulakh.drawing_app.shapes

import com.bohdanbulakh.drawing_app.shapes.interfaces.LineInterface

open class LineShape() : Shape(), LineInterface